[package]
name = "audit-nexus"
version = "0.1.0"
edition = "2021"
authors = ["MethodWhite"]
description = "MCP audit & cybersecurity server with skill-based seniority system for OpenCode"
license = "MIT"

[[bin]]
name = "audit-nexus"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hex = "0.4"
base64 = "0.22"
sha2 = "0.10"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
